# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  db_query.py  page.py  url.py
page_analyzer/templates/: base.html  home.html  index.html  url.html  urls.html
