[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["igor130384"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
