[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["igor130384"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
