[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["igor130384"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
validators = "^0.22.0"
pip = "^23.2.1"
install = "^1.3.5"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
